{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 144,
  "lineage": "934185f3-dc7f-7165-dca7-0cf2f27a2399",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0edeee045cbcec406",
            "arn": "arn:aws:ec2:eu-north-1:271547279005:elastic-ip/eipalloc-0edeee045cbcec406",
            "association_id": "eipassoc-02b465cc611a83fa4",
            "domain": "vpc",
            "id": "eipalloc-0edeee045cbcec406",
            "instance": "i-02f9d4ae2866133af",
            "network_border_group": "eu-north-1",
            "network_interface": "eni-032d95d7e35afc596",
            "private_dns": "ip-10-10-101-157.eu-north-1.compute.internal",
            "private_ip": "10.10.101.157",
            "public_dns": "ec2-16-170-79-29.eu-north-1.compute.amazonaws.com",
            "public_ip": "16.170.79.29",
            "public_ipv4_pool": "amazon",
            "region": "eu-north-1",
            "tags": {
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "environment": "stag",
              "owners": "hr"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "data.aws_availability_zones.available",
            "module.ec2_public.aws_ebs_volume.this",
            "module.ec2_public.aws_ec2_tag.spot_instance",
            "module.ec2_public.aws_eip.this",
            "module.ec2_public.aws_iam_instance_profile.this",
            "module.ec2_public.aws_iam_role.this",
            "module.ec2_public.aws_iam_role_policy_attachment.this",
            "module.ec2_public.aws_instance.ignore_ami",
            "module.ec2_public.aws_instance.this",
            "module.ec2_public.aws_security_group.this",
            "module.ec2_public.aws_spot_instance_request.this",
            "module.ec2_public.aws_volume_attachment.this",
            "module.ec2_public.aws_vpc_security_group_egress_rule.this",
            "module.ec2_public.aws_vpc_security_group_ingress_rule.this",
            "module.ec2_public.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_public.data.aws_partition.current",
            "module.ec2_public.data.aws_ssm_parameter.this",
            "module.ec2_public.data.aws_subnet.this",
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_block_public_access_exclusion.this",
            "module.vpc.aws_vpc_block_public_access_options.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_caller_identity.current",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch",
            "module.vpc.data.aws_partition.current",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_public",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:271547279005:subnet/subnet-0a487601595097566",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "available_ip_address_count": 251,
            "cidr_block": "10.10.101.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a487601595097566",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "271547279005",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "state": "available",
            "tags": {
              "Name": "hr-stag-eksdemo1-public-eu-north-1a",
              "Type": "Public Subnets",
              "environment": "stag",
              "kubernetes.io/cluster/hr-stag-eksdemo1": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "hr"
            },
            "vpc_id": "vpc-08688db2e89668aba"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.ec2_public",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0d2aad4794ad02001",
            "arn": "arn:aws:ec2:eu-north-1:271547279005:instance/i-02f9d4ae2866133af",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02f9d4ae2866133af",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "eks-terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-032d95d7e35afc596"
              }
            ],
            "primary_network_interface_id": "eni-032d95d7e35afc596",
            "private_dns": "ip-10-10-101-157.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.101.157",
            "public_dns": "ec2-13-60-235-186.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.60.235.186",
            "region": "eu-north-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07dbd8d2550580c1c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a487601595097566",
            "tags": {
              "Name": "hr-stag-BastionHost",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-BastionHost",
              "environment": "stag",
              "owners": "hr"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "hr-stag-BastionHost",
              "environment": "stag",
              "owners": "hr"
            },
            "vpc_security_group_ids": [
              "sg-0428a8e8eff768bbf",
              "sg-067178a5de4700615"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "271547279005",
            "id": "i-02f9d4ae2866133af",
            "region": "eu-north-1"
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "data.aws_availability_zones.available",
            "module.ec2_public.aws_iam_instance_profile.this",
            "module.ec2_public.aws_iam_role.this",
            "module.ec2_public.aws_security_group.this",
            "module.ec2_public.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_public.data.aws_partition.current",
            "module.ec2_public.data.aws_ssm_parameter.this",
            "module.ec2_public.data.aws_subnet.this",
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_public",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:271547279005:security-group/sg-067178a5de4700615",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-067178a5de4700615",
            "ingress": [],
            "name": "hr-stag-BastionHost-20251202164201111800000006",
            "name_prefix": "hr-stag-BastionHost-",
            "owner_id": "271547279005",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hr-stag-BastionHost",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-BastionHost",
              "environment": "stag",
              "owners": "hr"
            },
            "timeouts": null,
            "vpc_id": "vpc-08688db2e89668aba"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "271547279005",
            "id": "sg-067178a5de4700615",
            "region": "eu-north-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.ec2_public.data.aws_subnet.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_public",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ipv4_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:271547279005:security-group-rule/sgr-0e37ceeef89c7fc2f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all IPv4 traffic",
            "from_port": null,
            "id": "sgr-0e37ceeef89c7fc2f",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-north-1",
            "security_group_id": "sg-067178a5de4700615",
            "security_group_rule_id": "sgr-0e37ceeef89c7fc2f",
            "tags": {
              "Name": "hr-stag-BastionHost-ipv4_default",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-BastionHost-ipv4_default",
              "environment": "stag",
              "owners": "hr"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "271547279005",
            "id": "sgr-0e37ceeef89c7fc2f",
            "region": "eu-north-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.ec2_public.aws_security_group.this",
            "module.ec2_public.data.aws_subnet.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "ipv6_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:271547279005:security-group-rule/sgr-0a88b45df4689ef5e",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": "Allow all IPv6 traffic",
            "from_port": null,
            "id": "sgr-0a88b45df4689ef5e",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-north-1",
            "security_group_id": "sg-067178a5de4700615",
            "security_group_rule_id": "sgr-0a88b45df4689ef5e",
            "tags": {
              "Name": "hr-stag-BastionHost-ipv6_default",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-BastionHost-ipv6_default",
              "environment": "stag",
              "owners": "hr"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "271547279005",
            "id": "sgr-0a88b45df4689ef5e",
            "region": "eu-north-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.ec2_public.aws_security_group.this",
            "module.ec2_public.data.aws_subnet.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:271547279005:security-group/sg-0428a8e8eff768bbf",
            "description": "Security Group with SSH port open for everybody (IPv4 CIDR), egress ports are all world open",
            "egress": [],
            "id": "sg-0428a8e8eff768bbf",
            "ingress": [],
            "name": "hr-stag-public-bastion-sg-20251202164147457800000004",
            "name_prefix": "hr-stag-public-bastion-sg-",
            "owner_id": "271547279005",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hr-stag-public-bastion-sg",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-public-bastion-sg",
              "environment": "stag",
              "owners": "hr"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-08688db2e89668aba"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "271547279005",
            "id": "sg-0428a8e8eff768bbf",
            "region": "eu-north-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-64638329",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "region": "eu-north-1",
            "security_group_id": "sg-0428a8e8eff768bbf",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-2990967684",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "region": "eu-north-1",
            "security_group_id": "sg-0428a8e8eff768bbf",
            "security_group_rule_id": "sgr-0d2fcd20393221a28",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.public_bastion_sg.aws_security_group.this",
            "module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:271547279005:network-acl/acl-0ee41f135bf72a866",
            "default_network_acl_id": "acl-0ee41f135bf72a866",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0ee41f135bf72a866",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "271547279005",
            "region": "eu-north-1",
            "subnet_ids": [
              "subnet-057ef826f7f6a5690",
              "subnet-06cef923f970b60aa",
              "subnet-0800704c3003d7775",
              "subnet-0a487601595097566"
            ],
            "tags": {
              "Name": "hr-stag-eksdemo1-default",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-eksdemo1-default",
              "environment": "stag",
              "owners": "hr"
            },
            "vpc_id": "vpc-08688db2e89668aba"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:271547279005:route-table/rtb-0cd5067d975e38e2a",
            "default_route_table_id": "rtb-0cd5067d975e38e2a",
            "id": "rtb-0cd5067d975e38e2a",
            "owner_id": "271547279005",
            "propagating_vgws": null,
            "region": "eu-north-1",
            "route": [],
            "tags": {
              "Name": "hr-stag-eksdemo1-default",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-eksdemo1-default",
              "environment": "stag",
              "owners": "hr"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-08688db2e89668aba"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:271547279005:security-group/sg-08fb64243d21a695c",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-08fb64243d21a695c",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "271547279005",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hr-stag-eksdemo1-default",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-eksdemo1-default",
              "environment": "stag",
              "owners": "hr"
            },
            "vpc_id": "vpc-08688db2e89668aba"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-027aaaacd0eb45e71",
            "arn": "arn:aws:ec2:eu-north-1:271547279005:elastic-ip/eipalloc-027aaaacd0eb45e71",
            "domain": "vpc",
            "id": "eipalloc-027aaaacd0eb45e71",
            "network_border_group": "eu-north-1",
            "public_dns": "ec2-51-21-39-0.eu-north-1.compute.amazonaws.com",
            "public_ip": "51.21.39.0",
            "public_ipv4_pool": "amazon",
            "region": "eu-north-1",
            "tags": {
              "Name": "hr-stag-eksdemo1-eu-north-1a",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-eksdemo1-eu-north-1a",
              "environment": "stag",
              "owners": "hr"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:271547279005:internet-gateway/igw-0cd544c21cdc288da",
            "id": "igw-0cd544c21cdc288da",
            "owner_id": "271547279005",
            "region": "eu-north-1",
            "tags": {
              "Name": "hr-stag-eksdemo1",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-eksdemo1",
              "environment": "stag",
              "owners": "hr"
            },
            "vpc_id": "vpc-08688db2e89668aba"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-027aaaacd0eb45e71",
            "association_id": "eipassoc-0abffcdf736062ff9",
            "connectivity_type": "public",
            "id": "nat-0c321565d51583bdc",
            "network_interface_id": "eni-0d1911ee3a4ad0fd1",
            "private_ip": "10.10.101.14",
            "public_ip": "51.21.39.0",
            "region": "eu-north-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a487601595097566",
            "tags": {
              "Name": "hr-stag-eksdemo1-eu-north-1a",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-eksdemo1-eu-north-1a",
              "environment": "stag",
              "owners": "hr"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0faedc47d1abb61161080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c321565d51583bdc",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-north-1",
            "route_table_id": "rtb-0faedc47d1abb6116",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "271547279005",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-north-1",
            "route_table_id": "rtb-0faedc47d1abb6116"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0cd544c21cdc288da",
            "id": "r-rtb-07232b02d15f07e4c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-north-1",
            "route_table_id": "rtb-07232b02d15f07e4c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "271547279005",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-north-1",
            "route_table_id": "rtb-07232b02d15f07e4c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:271547279005:route-table/rtb-0da1586142cdacffa",
            "id": "rtb-0da1586142cdacffa",
            "owner_id": "271547279005",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [],
            "tags": {
              "Name": "hr-stag-eksdemo1-db",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-eksdemo1-db",
              "environment": "stag",
              "owners": "hr"
            },
            "timeouts": null,
            "vpc_id": "vpc-08688db2e89668aba"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "271547279005",
            "id": "rtb-0da1586142cdacffa",
            "region": "eu-north-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:271547279005:route-table/rtb-0faedc47d1abb6116",
            "id": "rtb-0faedc47d1abb6116",
            "owner_id": "271547279005",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [],
            "tags": {
              "Name": "hr-stag-eksdemo1-private",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-eksdemo1-private",
              "environment": "stag",
              "owners": "hr"
            },
            "timeouts": null,
            "vpc_id": "vpc-08688db2e89668aba"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "271547279005",
            "id": "rtb-0faedc47d1abb6116",
            "region": "eu-north-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:271547279005:route-table/rtb-07232b02d15f07e4c",
            "id": "rtb-07232b02d15f07e4c",
            "owner_id": "271547279005",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [],
            "tags": {
              "Name": "hr-stag-eksdemo1-public",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-eksdemo1-public",
              "environment": "stag",
              "owners": "hr"
            },
            "timeouts": null,
            "vpc_id": "vpc-08688db2e89668aba"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "271547279005",
            "id": "rtb-07232b02d15f07e4c",
            "region": "eu-north-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0026d28ae9393de39",
            "region": "eu-north-1",
            "route_table_id": "rtb-0da1586142cdacffa",
            "subnet_id": "subnet-06cef923f970b60aa"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029c9e09cfb92c92b",
            "region": "eu-north-1",
            "route_table_id": "rtb-0da1586142cdacffa",
            "subnet_id": "subnet-0c034fa2baf882b65"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-009919b6d8e42ef86",
            "region": "eu-north-1",
            "route_table_id": "rtb-0faedc47d1abb6116",
            "subnet_id": "subnet-057ef826f7f6a5690"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0675108d40fceacce",
            "region": "eu-north-1",
            "route_table_id": "rtb-0faedc47d1abb6116",
            "subnet_id": "subnet-0800704c3003d7775"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa773f2aa4e4dd8d",
            "region": "eu-north-1",
            "route_table_id": "rtb-07232b02d15f07e4c",
            "subnet_id": "subnet-0a487601595097566"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083a78efa4006397b",
            "region": "eu-north-1",
            "route_table_id": "rtb-07232b02d15f07e4c",
            "subnet_id": "subnet-0380a42c58b2665db"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:271547279005:subnet/subnet-06cef923f970b60aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.10.151.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06cef923f970b60aa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "271547279005",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "hr-stag-eksdemo1-db-eu-north-1a",
              "Type": "database-subnets",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-eksdemo1-db-eu-north-1a",
              "Type": "database-subnets",
              "environment": "stag",
              "owners": "hr"
            },
            "vpc_id": "vpc-08688db2e89668aba"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "271547279005",
            "id": "subnet-06cef923f970b60aa",
            "region": "eu-north-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:271547279005:subnet/subnet-0c034fa2baf882b65",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.10.152.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c034fa2baf882b65",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "271547279005",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "hr-stag-eksdemo1-db-eu-north-1b",
              "Type": "database-subnets",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-eksdemo1-db-eu-north-1b",
              "Type": "database-subnets",
              "environment": "stag",
              "owners": "hr"
            },
            "vpc_id": "vpc-08688db2e89668aba"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "271547279005",
            "id": "subnet-0c034fa2baf882b65",
            "region": "eu-north-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:271547279005:subnet/subnet-057ef826f7f6a5690",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057ef826f7f6a5690",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "271547279005",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "hr-stag-eksdemo1-private-eu-north-1a",
              "Type": "private-subnets",
              "environment": "stag",
              "kubernetes.io/cluster/hr-stag-eksdemo1": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-eksdemo1-private-eu-north-1a",
              "Type": "private-subnets",
              "environment": "stag",
              "kubernetes.io/cluster/hr-stag-eksdemo1": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "hr"
            },
            "vpc_id": "vpc-08688db2e89668aba"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "271547279005",
            "id": "subnet-057ef826f7f6a5690",
            "region": "eu-north-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:271547279005:subnet/subnet-0800704c3003d7775",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0800704c3003d7775",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "271547279005",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "hr-stag-eksdemo1-private-eu-north-1b",
              "Type": "private-subnets",
              "environment": "stag",
              "kubernetes.io/cluster/hr-stag-eksdemo1": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-eksdemo1-private-eu-north-1b",
              "Type": "private-subnets",
              "environment": "stag",
              "kubernetes.io/cluster/hr-stag-eksdemo1": "shared",
              "kubernetes.io/role/internal-elb": "1",
              "owners": "hr"
            },
            "vpc_id": "vpc-08688db2e89668aba"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "271547279005",
            "id": "subnet-0800704c3003d7775",
            "region": "eu-north-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:271547279005:subnet/subnet-0a487601595097566",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.10.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a487601595097566",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "271547279005",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "hr-stag-eksdemo1-public-eu-north-1a",
              "Type": "Public Subnets",
              "environment": "stag",
              "kubernetes.io/cluster/hr-stag-eksdemo1": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-eksdemo1-public-eu-north-1a",
              "Type": "Public Subnets",
              "environment": "stag",
              "kubernetes.io/cluster/hr-stag-eksdemo1": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "hr"
            },
            "vpc_id": "vpc-08688db2e89668aba"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "271547279005",
            "id": "subnet-0a487601595097566",
            "region": "eu-north-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:271547279005:subnet/subnet-0380a42c58b2665db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1b",
            "availability_zone_id": "eun1-az2",
            "cidr_block": "10.10.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0380a42c58b2665db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "271547279005",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "hr-stag-eksdemo1-public-eu-north-1b",
              "Type": "Public Subnets",
              "environment": "stag",
              "kubernetes.io/cluster/hr-stag-eksdemo1": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-eksdemo1-public-eu-north-1b",
              "Type": "Public Subnets",
              "environment": "stag",
              "kubernetes.io/cluster/hr-stag-eksdemo1": "shared",
              "kubernetes.io/role/elb": "1",
              "owners": "hr"
            },
            "vpc_id": "vpc-08688db2e89668aba"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "271547279005",
            "id": "subnet-0380a42c58b2665db",
            "region": "eu-north-1"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:271547279005:vpc/vpc-08688db2e89668aba",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0ee41f135bf72a866",
            "default_route_table_id": "rtb-0cd5067d975e38e2a",
            "default_security_group_id": "sg-08fb64243d21a695c",
            "dhcp_options_id": "dopt-0828215a06986537a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08688db2e89668aba",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cd5067d975e38e2a",
            "owner_id": "271547279005",
            "region": "eu-north-1",
            "tags": {
              "Name": "hr-stag-eksdemo1",
              "environment": "stag",
              "owners": "hr"
            },
            "tags_all": {
              "Name": "hr-stag-eksdemo1",
              "environment": "stag",
              "owners": "hr"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "271547279005",
            "id": "vpc-08688db2e89668aba",
            "region": "eu-north-1"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}